# lg

./: .dockerignore  Cargo.toml  Dockerfile  README.md
assets/: index.html
assets/static/: main.css
configs/: global.json  local.json
src/: configs.rs  main.rs  public_ip.rs
src/routes/: exec.rs  index.rs  mod.rs  static_data.rs  test_data.rs
