[package]
name = "lookingglass"
publish = false
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "A clean and simple network looking glass application"
readme = "README.md"
homepage = "https://github.com/ewpratten/lg"
repository = "https://github.com/ewpratten/lg"
license = "GPL-3.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rocket = "0.5.0-rc.1"
tera = "1.15.0"
clap = "3.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
autojson = "0.1.0"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread", "process"] }
rust-embed = "6.2.0"
rocket-client-addr = "0.5.0"
public-ip = "0.2.1"
log = "0.4.14"